--- a/examples/cluster-example/data/pom.xml
+++ b/examples/cluster-example/data/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>com.originframework</groupId>
       <artifactId>origin-starter-app</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${origin.version}</version>
       <scope>compile</scope>
       <type>jar</type>
     </dependency>
