--- a/examples/cluster-example/es-data/pom.xml
+++ b/examples/cluster-example/es-data/pom.xml
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>com.originframework</groupId>
       <artifactId>origin-starter-web</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${origin.version}</version>
       <scope>compile</scope>
       <type>jar</type>
     </dependency>
