--- a/examples/cluster-example/redis-data/pom.xml
+++ b/examples/cluster-example/redis-data/pom.xml
@@ -12,7 +12,7 @@
         <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
-        <origin.version>1.0-SNAPSHOT</origin.version>
+        <origin.version>1.0</origin.version>
         <main.verticle>com.kevin.sample.redis.Main</main.verticle>
     </properties>
 
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.originframework</groupId>
             <artifactId>origin-starter-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${origin.version}</version>
             <scope>compile</scope>
             <type>jar</type>
         </dependency>
