--- a/examples/single-example/pom.xml
+++ b/examples/single-example/pom.xml
@@ -17,7 +17,7 @@
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
         <graal.version>21.2.0</graal.version>
 
-        <origin.version>1.0-SNAPSHOT</origin.version>
+        <origin.version>1.0</origin.version>
 
         <main.verticle>com.kevin.sample.vertx.blog.MainVerticle</main.verticle>
     </properties>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.originframework</groupId>
             <artifactId>origin-starter-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${origin.version}</version>
             <scope>compile</scope>
             <type>jar</type>
         </dependency>
