--- a/origin-starter-web/pom.xml
+++ b/origin-starter-web/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.originframework</groupId>
     <artifactId>origin-starter-web</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>origin-starter-web</name>
     <url>https://kevin913.com.cn</url>
 
