refactor handler and support batch insert using esclient.

--- a/origin-starter-web/src/main/resources/conf/default_config.json
+++ b/origin-starter-web/src/main/resources/conf/default_config.json
@@ -26,6 +26,7 @@
     "host": "localhost",
     "port": 9200,
     "schema": "http",
-    "data-type": "application/json"
+    "data-type": "application/json",
+    "product-id": "es"
   }
 }
