--- a/examples/cluster-example/data/src/main/resources/conf/config.json
+++ b/examples/cluster-example/data/src/main/resources/conf/config.json
@@ -1,12 +1,3 @@
 {
-  "db": {
-    "port": 5432,
-    "host": "127.0.0.1",
-    "user": "postgres",
-    "password": "postgres",
-    "database": "blog",
-    "pool": {
-      "maxSize": 20
-    }
-  }
+  "demo-file": "d:/demo/demo.txt"
 }
