--- a/examples/cluster-example/es-data/pom.xml
+++ b/examples/cluster-example/es-data/pom.xml
@@ -41,6 +41,7 @@
     <dependency>
       <groupId>co.elastic.clients</groupId>
       <artifactId>elasticsearch-java</artifactId>
+      <version>8.11.0</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
