--- a/examples/cluster-example/es-data/pom.xml
+++ b/examples/cluster-example/es-data/pom.xml
@@ -13,7 +13,7 @@
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
     <graal.version>21.2.0</graal.version>
-    <origin.version>1.0-SNAPSHOT</origin.version>
+    <origin.version>2.0</origin.version>
     <main.verticle>com.kevin.sample.es.Main</main.verticle>
   </properties>
 
