Add default routers or tasks for data spi.

--- a/origin-starter-common/pom.xml
+++ b/origin-starter-common/pom.xml
@@ -1,11 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.originframework</groupId>
-    <artifactId>origin-framework-spi</artifactId>
+    <artifactId>origin-starter-common</artifactId>
     <version>2.0</version>
-    <name>Origin Framework SPI</name>
+
+    <name>origin-starter-common</name>
     <url>https://kevin913.com.cn</url>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
@@ -26,9 +30,15 @@
     <dependencies>
         <dependency>
             <groupId>com.originframework</groupId>
-            <artifactId>origin-framework-core</artifactId>
+            <artifactId>origin-framework-spi</artifactId>
             <version>${origin.version}</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+            <version>1.18.22</version>
         </dependency>
     </dependencies>
     <build>
@@ -43,4 +53,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
