--- a/origin-starter-app/pom.xml
+++ b/origin-starter-app/pom.xml
@@ -27,8 +27,9 @@
     <dependencies>
         <dependency>
             <groupId>com.originframework</groupId>
-            <artifactId>origin-framework-spi</artifactId>
+            <artifactId>origin-starter-common</artifactId>
             <version>${origin.version}</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
