--- a/examples/cluster-example/es-data/pom.xml
+++ b/examples/cluster-example/es-data/pom.xml
@@ -13,7 +13,7 @@
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
     <graal.version>21.2.0</graal.version>
-    <origin.version>2.0</origin.version>
+    <origin.version>2.1</origin.version>
     <main.verticle>com.kevin.sample.es.Main</main.verticle>
   </properties>
 
@@ -47,6 +47,7 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -73,7 +74,7 @@
                 <transformer
                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>${launcher.class}</Main-Class>
+                    <Main-Class>${main.verticle}</Main-Class>
                     <Main-Verticle>${main.verticle}</Main-Verticle>
                   </manifestEntries>
                 </transformer>
